projects spacing fix

--- a/src/styles/sass/projects.scss
+++ b/src/styles/sass/projects.scss
@@ -33,7 +33,7 @@
   text-align: center;
 }
 .projectPic {
-  width: 25vh;
+  width: 185vh;
 }
 .cardLink {
   color: white;
